backend/infrastructure/manifests/marketplace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplaceservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: marketplaceservice
  template:
    metadata:
      labels:
        app: marketplaceservice
    spec:
      containers:
        - name: marketplaceservice
          image: oussamahdidou/marketplaceservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: marketplaceservice
spec:
  selector:
    app: marketplaceservice
  ports:
    - port: 80
      targetPort: 8080
