backend/infrastructure/manifests/usersservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usersservice
  template:
    metadata:
      labels:
        app: usersservice
    spec:
      containers:
        - name: usersservice
          image: ${DOCKER_REGISTRY}/usersservice
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: usersservice
spec:
  selector:
    app: usersservice
  ports:
    - port: 80
      targetPort: 8080
